fluxcd/apps/base/cyberchef/cyberchef.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cyberchef
  labels:
    toolkit.fluxcd.io/tenant: sre-team
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyberchef-deployment
  namespace: cyberchef
  labels:
    app: cyberchef
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cyberchef
  template:
    metadata:
      labels:
        app: cyberchef
    spec:
      containers:
      - name: cyberchef
        image: ghcr.io/gchq/cyberchef:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: cyberchef-service
  namespace: cyberchef
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
  selector:
    app: cyberchef
