fluxcd/apps/base/cyberchef/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cyberchef-ingress
  namespace: cyberchef
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - cyberchef.palisade.reinthal.me
      secretName: palisade-reinthal-me-tls
  rules:
    - host: cyberchef.palisade.reinthal.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cyberchef-service
                port:
                  number: 8080
---
